css bug with embedded code snippets overflowing edge of screen - fixed

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -127,6 +127,7 @@ pre {
   hyphens: none;
   padding: 15px;
   border-radius: 5px;
+  overflow-x: scroll;
 }
 
 body {
